# LearnOpenGL

./: .gitignore  CMakeLists.txt
LearnOpenGL/: CMakeLists.txt
LearnOpenGL/shaders/: fragment.glsl  vertex.glsl
LearnOpenGL/src/: Camera.h  LearnOpenGL.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  Vertex.h
assimp-5.2.4/: CMakeLists.txt
assimp-5.2.4/cmake-modules/: FindDirectX.cmake
assimp-5.2.4/code/Common/: DefaultIOStream.cpp
glad-202204/: CMakeLists.txt
glad-202204/include/glad/: glad.h
glad-202204/src/: glad.c
